--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@google/maps": "^0.4.6",
     "async": "^2.6.1",
+    "axios": "^0.18.0",
     "bcrypt": "^2.0.1",
     "body-parser": "^1.18.3",
     "connect-mongo": "^2.0.1",
@@ -17,11 +18,14 @@
     "express-flash": "0.0.2",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
+    "gridfs-stream": "^1.1.1",
     "hbs": "~4.0.1",
     "http-errors": "~1.6.2",
+    "method-override": "^2.3.10",
     "mongoose": "^5.1.1",
     "morgan": "~1.9.0",
     "multer": "^1.3.0",
+    "multer-gridfs-storage": "^3.0.1",
     "nodemailer": "^4.6.4",
     "nodemon": "^1.17.5",
     "passport": "^0.4.0",
